monitoring/base/prometheus/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  labels:
    k8s-app: prometheus
spec:
  selector:
    matchLabels:
      k8s-app: prometheus
  serviceName: "prometheus"
  replicas: 1
  podManagementPolicy: "Parallel"
  updateStrategy:
    type: "RollingUpdate"
  volumeClaimTemplates: []
  template:
    metadata:
      labels:
        k8s-app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prometheus
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9090
          #Probe the `/-/ready` and `/-/healthy` endpoints
          readinessProbe:
            httpGet:
              #path: /prometheus/-/ready
              path: /-/ready              
              port: 9090
            initialDelaySeconds: 60
            timeoutSeconds: 30
            failureThreshold: 10
            periodSeconds: 10               
          livenessProbe:
            httpGet:
              #path: /prometheus/-/healthy
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
            failureThreshold: 10
            periodSeconds: 10             
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/config
            - name: rules-volume
              mountPath: /etc/prometheus_rules
            - name: alerts-volume
              mountPath: /etc/prometheus_alerts
            - name: data-volume
              mountPath: /prometheus/
              # subPath: ""
      terminationGracePeriodSeconds: 30
      volumes:
        # The Prometheus configuration-ConfigMap is mounted into the Pods as a volume at `/etc/prometheus/config`
        - name: config-volume
          configMap:
            name: prometheus-config
        # The Prometheus rules-ConfigMap is mounted into the Pods as a volume at `/etc/prometheus/rules`
        - name: rules-volume
          configMap:
            name: prometheus-rules
        # The Prometheus alerts-ConfigMap is mounted into the Pods as a volume at `/etc/prometheus/alerts`
        - name: alerts-volume
          configMap:
            name: prometheus-alerts
