monitoring/base/prometheus/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: prometheus
spec:
  entryPoints: []
  routes: null
